lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__openai_responses__encode_dual_id_tool_round_trip.snap
---
source: lib/components/fabro-llm/tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "model": "gpt-test",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Find foo"
        }
      ]
    },
    {
      "type": "function_call",
      "id": "fc_123",
      "call_id": "call_abc",
      "name": "search",
      "arguments": "{\"query\":\"foo\"}"
    },
    {
      "type": "function_call_output",
      "call_id": "call_abc",
      "output": "2 matches"
    }
  ],
  "max_output_tokens": 128,
  "tools": [
    {
      "type": "function",
      "name": "search",
      "description": "Search files",
      "parameters": {
        "type": "object",
        "properties": {
          "query": {
            "type": "string"
          }
        },
        "required": [
          "query"
        ]
      }
    },
    {
      "type": "function",
      "name": "read_file",
      "description": "Read a file by path",
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          }
        }
      }
    }
  ],
  "store": false,
  "include": [
    "reasoning.encrypted_content"
  ]
}
